serverTools/reglas_iptables
# Template iptables
# iptables-restore < reglas_iptables
# iptables-save > /etc/iptables/rules.v4

*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

# Permite conexiones SSH en el puerto 2201 (TCP)
-A INPUT -p tcp --dport 22 -j ACCEPT

# Permite conexiones HTTP (puerto 80, TCP)
-A INPUT -p tcp --dport 80 -j ACCEPT

# Permite conexiones HTTPS (puerto 443, TCP)
-A INPUT -p tcp -m tcp --sport 443 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT

# Permite conexiones para MySQL
-A INPUT -i lo -p tcp --dport 3306 -j ACCEPT

# Permite consultar servidor DNS
-A INPUT -p udp -m udp --sport 53 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT

# Establecer políticas predeterminadas
-P INPUT DROP
-P FORWARD DROP
-P OUTPUT ACCEPT

# Permitir conexiones de bucle local
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
